--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "api-platform/api-pack": "^1.2",
         "doctrine/orm": "^2.7",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
