section 9 back end

--- a/.env
+++ b/.env
@@ -41,3 +41,9 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=11e60d861750f4c26ea0781438ee74ba
 ###< lexik/jwt-authentication-bundle ###
+
+###> doctrine/mongodb-odm-bundle ###
+MONGODB_URL=mongodb://94.23.221.25:27017
+MONGODB_DB=symreact
+###< doctrine/mongodb-odm-bundle ###
+
