--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,10 +48,11 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
          - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-         - { path: ^/api/customers, roles: IS_AUTHENTICATED_FULLY }
+         - { path: ^/api/customers, roles: IS_AUTHENTICATED_ANONYOMUSLY }
          - { path: ^/api/invoices, roles: IS_AUTHENTICATED_FULLY }
-         - { path: ^/api/users,
+         - { 
+             path: ^/api/users,
              roles: IS_AUTHENTICATED_FULLY,
-              methods: [GET, PUT, DELETE],
+             methods: [GET, PUT, DELETE],
            }
         # - { path: ^/profile, roles: ROLE_USER }
