--- a/config/services.yaml
+++ b/config/services.yaml
@@ -29,3 +29,14 @@ services:
 
     App\Serializer\PatchedDateTimeNormalizer:
         tags: [serializer.normalizer]
+    App\Events\JwtCreatedSubscriber:
+        tags:
+          - {
+                name: Kernel.event_listener, 
+                event: lexik_jwt_authentication.on_jwt_created,
+                method: updateJwtData,
+            }
+
+            
+            
+
