--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,10 @@
         "symfony/serializer-pack": "*",
         "symfony/string": "*",
         "symfony/translation": "*",
-        "symfony/twig-pack": "*",
+        "symfony/twig-pack": "^1.0",
         "symfony/validator": "*",
         "symfony/web-link": "*",
+        "symfony/webpack-encore-bundle": "^1.7",
         "symfony/yaml": "*"
     },
     "require-dev": {
